# grc-rs

./: .gitignore  Cargo.toml  Makefile  README.md  grc-rs.1  grc_rs.1  zsh.compl
.github/workflows/: rust.yml
config/: conf.lsusb  grc-rs.conf
src/: colourise.rs  grc.rs  main.rs
