[package]
name = "grc-rs"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Generic Colouriser ported to Rust"
repository = "https://github.com/larsch/grc-rs"
homepage = "https://github.com/larsch/grc-rs"

[dependencies]
regex = "^1.5.4"
console = "^0.14.1"
lazy_static = "^1.4.0"
debug_print = "^1.0.0"
argparse = "^0.2.2"
which = "^4.2.2"
